fixed jumping /# and wonky vertical heights

--- a/css/styling.css
+++ b/css/styling.css
@@ -17,6 +17,9 @@
   color: #fefefe;
   padding: 20%;
   text-align: center; }
+  @media (max-width: 46.24em) {
+    .name {
+      min-height: 100vh; } }
   @media (min-width: 46.25em) {
     .name {
       grid-area: name; } }
@@ -27,7 +30,8 @@
   vertical-align: middle; }
   @media (max-width: 46.24em) {
     .name-text {
-      margin: 50% 0; } }
+      margin: 50% 0;
+      margin-top: 10em; } }
   @media (min-width: 46.25em) {
     .name-text {
       margin: auto;
@@ -45,7 +49,8 @@
   color: #333333; }
   @media (max-width: 46.24em) {
     .content {
-      margin: 10%; } }
+      margin: 10%;
+      height: 79vh; } }
   @media (min-width: 46.25em) {
     .content {
       margin: 15%;
